--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.STDManager">
         <activity
+            android:name=".ClassroomActivity"
+            android:exported="false" />
+        <activity
             android:name=".StatisticActivity"
             android:exported="false" />
         <activity
