--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.STDManager">
         <activity
+            android:name=".Statistic.GenderStatsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Statistic.MarkStatsActivity"
+            android:exported="false" />
+        <activity
             android:name=".Classroom.ClassroomExportActivity"
             android:exported="false" />
         <activity
