chuyển topbar từ layout sang fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.STDManager">
         <activity
+            android:name=".Statistic.RankedStatsActivity"
+            android:exported="false" />
+        <activity
             android:name=".Statistic.GenderStatsActivity"
             android:exported="false" />
         <activity
