thêm loading cho statistic, thêm thư mục subject

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.STDManager">
         <activity
-            android:name=".SubjectActivity"
+            android:name=".Subject.SubjectActivity"
             android:exported="false" />
         <activity
             android:name=".Statistic.RankedStatsActivity"
