--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.STDManager">
         <activity
+            android:name=".Settings.SettingsApplicationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Settings.SettingsAccountActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Settings.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Classroom.ClassroomExportPreviewActivity"
+            android:exported="false" />
+        <activity
             android:name=".Subject.SubjectActivity"
             android:exported="false" />
         <activity
