--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,10 @@
             android:name=".Settings.SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".Classroom.ClassroomExportPreviewActivity"
             android:name=".Subject.SubjectAddActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Classroom.ClassroomExportPreviewActivity"
             android:exported="false" />
         <activity
             android:name=".Subject.SubjectEditActivity"
