--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.STDManager">
         <activity
+            android:name=".Score.ScoreSubjectActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Score.ScoreStudentEditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Score.ScoreStudentActivity"
+            android:exported="false" />
+        <activity
             android:name=".Subject.SubjectExportActivity"
             android:exported="false" />
         <activity
