--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.STDManager">
         <activity
+            android:name=".Event.EventActivityCreation"
+            android:exported="false" />
+        <activity
+            android:name=".Event.EventActivityUpdate"
+            android:exported="false" />
+        <activity
+            android:name=".Event.EventActivity"
+            android:exported="false" />
+        <activity
             android:name=".Statistic.SubjectListActivity"
             android:exported="false" />
         <activity
